--- a/react/package.json
+++ b/react/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "react": "18.3.1",
-  "react-dom": "18.3.1"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react": "^5.0.0",
